@@ -1,4 +1,4 @@
-3.12.0+dev11 (2009-12-01)
+3.12.0+dev12 (2009-12-01)
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
