@@ -2145,6 +2145,10 @@ and type_statement env sexp =
   begin_def();
   let exp = type_exp env sexp in
   end_def();
+  if !Clflags.strict_sequence then
+    let expected_type = instance Predef.type_unit in
+    unify env expected_type exp.exp_type;
+    exp else
   let ty = expand_head env exp.exp_type and tv = newvar() in
   begin match ty.desc with
   | Tarrow _ ->
